<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search_movie" />
        <item
            android:id="@+id/nav_search_show"
            android:icon="@drawable/ic_search"
            android:title="@string/search_movie" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/favorite" />

    </group>

    <item android:title="@string/option">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_language"
                android:title="@string/setting" />

        </menu>
    </item>

</menu>
